  * Added a clock offset parameter to the cable model (lsl.common.stations.Cable)
  * Cleaned up the correlateTBW.py scripts
  * Fixed a bug in the correlator integer sample delays
  * Fixed bugs in the lsl.misc.beamformer module related to delays
  * Fixed the URL used by lsl.misc.geodesy.__loadHistoric1992()
  * Added support for FreeBSD

0.5.1
  * Added jinja2 to the list of install dependencies
  * Fixed the segfault associated with the DR spectrometer reader
  * Cleaned up how splitDRX.py offsets in a file
  * Removed splitTBW.py since it is no longer needed
  * Fixed a few bugs in the SDF parser dealing the logging keywords
  * Modified lsl.common.metabundle.getSessionDefinition to use the SDF in the tarball rather than generate it from the session and observation specification files
  * Made drxSpectra.py robust against DRX frames with decimation of zero
  * Made the SDF parser more robust against single word names

0.5.0
  * Worked on adding better polarization support to correlator.fx and correlator.uvUtils
  * Updated the correlateTBN script to make full polarization support possible
  * Added a crude deconvolution routine that should work with the AIPY ImgW images
  * Worked on adding in support for binary packed SSMIF files in lsl.common.stations
  * Worked on adding in support for binary packed SDM files via a new lsl.common.sdm module
  * Worked on adding in support for the various MCS meta-data tarball file formats
  * Moved the SDF module out of SessionSchedules and into lsl.common
  * Added functions to generate the TBN and DRX filter magnitude response
  * Added versions of the spectra plotters, the correlations, and the stand plotters that use MCS meta-data bundles
  * Added a basic SSMIF file for the north arm site (LWA-2)
  * Added a preliminary module for incoherent dedispersion lsl.misc.dedispersion
  * Added support for spectral kurtosis via lsl.statistics.kurtosis
  * Updated the dependency list