@@ -15,6 +15,7 @@
   * Fixed bugs in the lsl.misc.beamformer module related to delays
   * Fixed the URL used by lsl.misc.geodesy.__loadHistoric1992()
   * Added support for FreeBSD
+  * Added datetime <-> MJD/MPM conversion functions to lsl.common.mcs
 
 0.5.1
   * Added jinja2 to the list of install dependencies
